Mon, Dec 17, 2007 Amos Anderson
1.  I added skewness and kurtosis to the statistics gathering. It doesn't
    appear to add significant expense to calculations, and the results seem
    interesting.

2.  Restart ckmf files will preserve all comments from parent ckmf file.
    Also, the code will add some data about the optimization to the restart file.
    My intent is to embed some data into the restart file containing info about
    the wavefunction. This is important to know which calculations are supposed
    to represent different or the same calculation, so the optimization energy
    is supposed to represent a wavefunction ID.

3.  I added a new file, bin/ckmf.pl. This script helps you examine a bunch of ckmf
    files at once.

Thu, Dec 13, 2007 Daniel R Fisher
1.  I added the option to include write only the energy data to
    checkpoint files.  This makes the files much smaller and preserves the
    data that is important for weighting, branching, and the equilibration
    array.
2.  I changed the objective function in QMCEquilibrationArray.  This
    class now stores the statistics for the first ten thousand samples for
    each set of properties and uses them to determine when the run has
    equilibrated.

Wed, Nov 28, 2007 Daniel R Fisher
1.  Fixed a bug in QMCWalker.  When a walker was read in from a
    checkpoint file, the distances in QMCWalkerData were not updated,
    so QMCFunctions could not evaluate the configuration.

Sun, Nov 11, 2007 Daniel R Fisher
1.  Fixed a memory leak in CambridgeThreeBodyJastrow.  Arrays for
    powers of the distances and other temp variables were being
    allocated and not deleted.  This was a problem for optimization
    runs because several Jastrows are created and evaluated at once.
2.  Changed the objective function in QMCEquilibrationArray.

Wed, Nov 7, 2007 Amos Anderson
1.  I improved the performance of the 3 body jastrow parameter derivative calculations.