@@ -11,6 +11,13 @@
 */
 //#define USE_CBLAS
 
+//this will concatenate an underscore at the end of the function name
+//used on gcc/linux, osx, 
+#define FORTRAN_FUNC(x) x ## _
+//keep the function name as is
+//used on AIX
+//#define FORTRAN_FUNC(x) (x)
+
 extern "C"
 {
 #ifdef USE_CBLAS
@@ -26,22 +33,22 @@ extern "C"
     The calling convention might be different depending on compiler.
     That is, you may need to remove (or add) "_" from the name.
   */
-  int dgemm_(const char* transa, const char* transb,
+  int FORTRAN_FUNC(dgemm)(const char* transa, const char* transb,
 	     const int* m, const int* n, const int* k,
 	     const double* alpha, const double* a, const int* lda,
 	     const double* b, const int* ldb, const double* beta,
 	     double* c, const int* ldc);
-  int sgemm_(const char* transa, const char* transb,
+  int FORTRAN_FUNC(sgemm)(const char* transa, const char* transb,
 	     const int* m, const int* n, const int* k,
 	     const float* alpha, const float* a, const int* lda,
 	     const float* b, const int* ldb, const float* beta,
 	     float* c, const int* ldc);
-  double ddot_(const int* N, const double *X, const int* incX,
+  double FORTRAN_FUNC(ddot)(const int* N, const double *X, const int* incX,
 	       const double *Y, const int* incY);
-  float sdot_(const int* N, const float *X, const int* incX,                                                                                                          
+  float FORTRAN_FUNC(sdot)(const int* N, const float *X, const int* incX,                                                                                                          
 	      const float *Y, const int* incY);
 
-  void daxpy_(const int* N, const double *a,
+  void FORTRAN_FUNC(daxpy)(const int* N, const double *a,
 	      const double * x, const int* incx,
 	      double *y, const int* incy);
 #endif
