@@ -1,3 +1,9 @@
+Tue, Dec 18, 2007 Amos Anderson
+1.  I changed all the function calls to fortran libraries so that the calls
+    are routed through a macro in cppblas.h. Some machines need an underscore
+    after the function name, others don't, so you'll have to manually toggle this
+    in order to compile on machines like AIX.
+
 Mon, Dec 17, 2007 Amos Anderson
 1.  I added skewness and kurtosis to the statistics gathering. It doesn't
     appear to add significant expense to calculations, and the results seem
